--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .DS_Store
 *.swp
 *.swo
-code/.local*
-code/.ipython*
+./code/.local*
+./code/.ipython*
+./code/.jupyter*
+./code/.ipynb_checkpoints*
