Removing all files in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .DS_Store
 *.swp
 *.swo
-./code/.local/share/*
-./code/.cache/*
-./code/.ipython*
-./code/.jupyter/*
-./code/.ipynb_checkpoints/*
+./code/.local/share
+./code/.cache
+./code/.ipython
+./code/.jupyter
+./code/.ipynb_checkpoints
