--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .DS_Store
 *.swp
 *.swo
-./code/.cache/*
-./code/.config/*
-./code/.ipynb_checkpoints/*
-./code/.ipython/*
-./code/.jupyter/*
-./code/.local/*
+code/.cache/*
+code/.config/*
+code/.ipynb_checkpoints/*
+code/.ipython/*
+code/.jupyter/*
+code/.local/*
